# Greatness

./: .gitignore  Cargo.toml  LICENSE  README.md  bar  foo  goo  install.sh  reset-all.sh  reset.sh
.github/: dependabot.yml
.github/workflows/: greetings.yml  stale.yml  todo.yml
assets/: greatness_transparent.xcf
docs/: SUMMARY.md
docs/about/: features.md  index.md  why.md
docs/examples/: index.md
docs/reference/: commands.md  index.md  scripting.md
houses/: README.md  astrid  astrid.greatenc  henry..great-enc  henry.1625106201.bak  marry
src/: \  log_utils.rs  main.rs  progress.rs  utils.rs
src/add/: mod.rs
src/doctor/: mod.rs
src/encrypt/: add.rs  mod.rs  rm.rs
src/git/: add.rs  clone.rs  commit.rs  mod.rs  pull.rs  push.rs  remote.rs
src/init/: mod.rs
src/install/: mod.rs
src/manifest/: mod.rs
src/pack/: mod.rs
src/package/: add.rs  jog.rs  mod.rs  rm.rs
src/package/overload/: add.rs  mod.rs  rm.rs
src/prompt/: mod.rs
src/pull/: add.rs  mod.rs  rm.rs
src/repel/: mod.rs
src/rm/: mod.rs
src/script/: assign.rs  jog.rs  mod.rs  parse.rs  register.rs  rm.rs  run.rs
src/status/: mod.rs
src/tag/: mod.rs
src/track/: mod.rs
