[package]
name = "great"
description = "Great(ness) is a tool to manage your dotfiles, and bring every new system you get up to par with the rest!"
version = "1.0.2"
authors = ["IsaccBarker <plutoisaplanet4324@gmail.com>"]
edition = "2018"
license = "MIT"
homepage = "https://github.com/IsaccBarker/greatness"
repository = "https://github.com/IsaccBarker/greatness"
documentation = "https://github.com/IsaccBarker/Greatness/wiki"
readme = "README.md"
keywords = ["greatness", "dotfiles", "packages"]
catagories = ["config"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/state.html

[dependencies]
clap = "4.0.28"
log = "0.4.14"
env_logger = "0.9.0"
snafu = "0.6.10"
serde = { version = "1.0", features = ["derive"] }
serde_yaml = "0.8"
home = "0.5.3"
nix = "0.23.0"
chrono = "0.4"
indicatif = "0.16.2"
rand = "0.8.4"
which = "4.1.0"
execute = "0.2.9"
git2 = "0.13.20"
osstrtools = "0.2.2"
question = "0.2.2"
rlua = "0.17.0"
strsim = "0.10.0"
subprocess = "0.2.7"
lazy_static = "1.4.0"
encryptfile = "0.1.3"
maplit = "1.0.2"
fs_extra = "1.2.0"
online = "3.0.1"
isahc = "1.4.0"
futures = "0.3"

